<resources>

    <!-- Defaults -->
    <string name="app_name">Saturnus</string>
    <string name="app_author_name">Ivette Valdez</string>
    <string name="app_copyright_template">Copyright © %s, %s v.%s</string>
    <string name="default_zero">0</string>
    <string name="default_unavailable">N/A</string>
    <string name="default_plus_template">+%s</string>
    <string name="default_minus_template">-%s</string>
    <string name="default_label_value_template">%s: %s</string>

    <!-- Actions -->
    <string name="action_ok">OK</string>
    <string name="action_see_details">Ver detalle</string>
    <string name="action_assign">Asignar</string>
    <string name="action_change">Cambiar</string>
    <string name="action_calculate">Calcular</string>
    <string name="action_edit">Editar</string>
    <string name="action_editing">Editando…</string>
    <string name="action_back">Atrás</string>
    <string name="action_next">Siguiente</string>
    <string name="action_save">Guardar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_delete">Borrar</string>
    <string name="action_exit">Salir</string>
    <string name="action_edit_person">Editar persona</string>
    <string name="action_delete_person">Borrar persona</string>
    <string name="action_select_person">Elegir a una persona</string>
    <string name="action_delete_invoice">Borrar factura</string>

    <!-- Messages -->
    <string name="message_saved">Los datos han sido guardados.</string>
    <string name="message_what_action_do_you_want">¿Qué acción deseas realizar?</string>
    <string name="message_delete_person_confirmation">
        ¿Estás seguro/a de que deseas borrar a la persona elegida?
    </string>
    <string name="message_delete_invoice_confirmation">
        ¿Estás seguro/a de que deseas borrar esta factura?
    </string>
    <string name="message_exit_without_saving_confirmation">
        ¿Estás seguro/a de que deseas salir sin guardar los cambios realizados?
    </string>
    <string name="message_select_type">Elige un tipo</string>
    <string name="message_select_status">Elige un estatus</string>
    <string name="message_deleted_invoice">La factura ha sido borrada.</string>

    <!-- Errors -->
    <string name="error_standard">Ha ocurrido un error.</string>
    <string name="error_missing_fields">Debes llenar todos los campos para poder continuar.</string>
    <string name="error_missing_receiver">
        Debes elegir a la persona que recibirá la factura para poder continuar.
    </string>
    <string name="error_missing_subtotal">Debes ingresar un subtotal para poder continuar.</string>
    <string name="error_missing_calculation">Debes hacer un cálculo para poder continuar.</string>
    <string name="error_missing_recalculation">
        Debes confirmar el cálculo pulsando el botón \"calcular\" para poder continuar.
    </string>
    <string name="error_calculating_title">Problema al calcular</string>
    <string name="error_saving_title">Problema al guardar</string>
    <string name="error_saving_message">
        Ha ocurrido un error, revisa los datos e intenta de nuevo.
    </string>
    <string name="error_person_name_too_short_template">
        El nombre o razón social no puede contener menos de %d caracteres.
    </string>
    <string name="error_invalid_person_name">
        El nombre o razón social debe contener al menos una letra.
    </string>
    <string name="error_invalid_rfc">El RFC ingresado es inválido.</string>
    <string name="error_folio_must_be_unique">El folio debe ser único.</string>
    <string name="error_oops_title">Oops!</string>
    <string name="error_missing_receivers_message">
        Para crear una nueva factura, primero debes agregar al menos a una persona que reciba facturas.
    </string>

    <!-- Menu -->
    <string name="menu_invoices">@string/invoices_title</string>
    <string name="menu_people">@string/people_title</string>

    <!-- Module: Invoices -->
    <string name="invoices_title">Facturación</string>
    <string name="invoices_detail">Detalle de factura</string>
    <string name="invoices_add_new">Agrega nuevas facturas</string>
    <string name="invoices_new">Nueva factura</string>
    <string name="invoices_issued">Facturas emitidas ante el SAT</string>
    <string name="invoices_issuing">Emisor/a de la factura</string>
    <string name="invoices_receiver">Receptor/a de la factura</string>
    <string name="invoices_folio">Folio</string>
    <string name="invoices_concept">Concepto</string>
    <string name="invoices_description">Descripción</string>
    <string name="invoices_effect">Efecto de la factura</string>
    <string name="invoices_issuing_date">Fecha de emisión</string>
    <string name="invoices_certification_date">Fecha de certificación</string>
    <string name="invoices_income">Ingreso</string>
    <string name="invoices_payment">Pago</string>
    <string name="invoices_subtotal">Subtotal</string>
    <string name="invoices_iva">IVA</string>
    <string name="invoices_iva_withholding">Retención de IVA</string>
    <string name="invoices_isr_withholding">Retención de ISR</string>
    <string name="invoices_total">Total</string>
    <string name="invoices_status">Estatus</string>
    <string name="invoices_cancellation_status">Estatus de cancelación</string>
    <string name="invoices_status_active">Vigente</string>
    <string name="invoices_status_inactive">Inactivo</string>
    <string name="invoices_status_cancellable">Cancelable sin aceptación</string>
    <string name="invoices_status_non_cancellable">No cancelable</string>
    <string name="invoices_concept_template">%s por %s (%s)</string>
    <string name="invoices_amount">Importe</string>

    <!-- Module: People -->
    <string name="people_title">Personas</string>
    <string name="people_add_new">Agrega nuevas personas</string>
    <string name="people_add_new_person">Nueva persona</string>
    <string name="people_name">Nombre o razón social</string>
    <string name="people_rfc">RFC</string>
    <string name="people_type">Tipo de persona</string>
    <string name="people_client_type">Tipo de RFC</string>
    <string name="people_select_client_type">Elige el tipo de RFC</string>
    <string name="people_client_type_issuing">Emisor</string>
    <string name="people_client_type_receiver">Receptor</string>

    <!-- Content -->
    <string name="content_menu">Menú</string>
    <string name="content_navigate_up">Atrás</string>
    <string name="content_add_new_person">Agregar una nueva persona</string>
    <string name="content_add_new_invoice">Agregar una nueva factura</string>
    <string name="content_person_type">Tipo de persona</string>

    <!-- Arrays -->
    <string-array name="invoices_effects">
        <item>@string/message_select_type</item>
        <item>@string/invoices_income</item>
        <item>@string/invoices_payment</item>
    </string-array>
    <string-array name="invoices_statuses">
        <item>@string/message_select_status</item>
        <item>@string/invoices_status_active</item>
        <item>@string/invoices_status_inactive</item>
    </string-array>
    <string-array name="invoices_cancellation_statuses">
        <item>@string/message_select_status</item>
        <item>@string/invoices_status_cancellable</item>
        <item>@string/invoices_status_non_cancellable</item>
    </string-array>
    <string-array name="people_tabs_titles">
        <item>Emisoras</item>
        <item>Receptoras</item>
    </string-array>
    <string-array name="people_client_types">
        <item>@string/people_select_client_type</item>
        <item>@string/people_client_type_issuing</item>
        <item>@string/people_client_type_receiver</item>
    </string-array>

</resources>